# rosalind

./: .gitignore  Blog.md  Cargo.toml  README.md  blog-post.ipynb  blog-post.md  generate_large_test_data.py  pyproject.toml  rosalind_dna.txt
.benchmarks/Darwin-CPython-3.9-64bit/: 0001_951694c6df083a57183ee37997b8978c44b884eb_20211111_162003_uncommited-changes.json
bio-lib/: Cargo.toml
bio-lib-algebraic-rs/: Cargo.toml
bio-lib-algebraic-rs/asm_output/: find_reverse_palindromes_adt.asm  find_reverse_palindromes_str.asm  palindrome-alg.ll  palindrome-str.ll  transcribe.ll  transcribe_adt.asm  transcribe_str.asm  transcribe_str.ll
bio-lib-algebraic-rs/src/: lib.rs
bio-lib-py/: pyproject.toml
bio-lib-py/bio_lib_py/: bio_lib.py
bio-lib-py/tests/: test_bio_lib.py
bio-lib-rs/: Cargo.toml
bio-lib-rs/src/: lib.rs
bio-lib-string-rs/: Cargo.toml
bio-lib-string-rs/src/: lib.rs
bio-lib/src/: lib.rs
blog-post/: blog-post.ipynb  blog-post.md  post-2.md  post3.md
data/: rosalind_dna.txt  rosalind_hamm.txt  rosalind_prot.txt  rosalind_rna.txt  rosalind_subs.txt
mendels1stlaw/: Cargo.toml
mendels1stlaw/src/: main.rs
p1/: rosalind_dna.txt
p1/src/: main.rs
p2/: Cargo.toml  rosalind_prot.txt  rosalind_rna.txt
p2/src/: main.rs
problems-py/haplotype_completion/: answer3.txt  answer4.txt
problems-py/haplotype_completion/answers/: ans4.txt
problems-py/metabolite_annotation/: delete.py
problems-py/p1/: p1.ipynb
problems-py/p2/: p2.ipynb  rosalind_rna.txt
problems-rs/: Cargo.toml
problems-rs/benches/: adt_palindome.rs  reverse_complement_iter_vs_vec.rs
problems-rs/data/: rosalind_dna.txt  rosalind_hamm.txt  rosalind_iprb.txt  rosalind_revc.txt
problems-rs/src/: lib.rs  main.rs
problems/epigenomic-marks/: example.ipynb
problems/example/: example.ipynb
problems/haplotype_completion/: answer1.txt  answer2.txt
problems/haplotype_completion/answers/: ans1.txt  ans2.txt
problems/metabolite-annotation/: answer3.txt  answer4.txt  example.ipynb
problems/metabolite_annotation/: answer2.txt  example.ipynb  helpers.py
problems/metabolite_annotation/all2/: 2.txt
problems/motif-example/: example.ipynb
problems/p2/: p2.ipynb  rosalind_rna (1).txt  rosalind_rna (2).txt
problems_py/epigenomic-marks/: example.ipynb
problems_py/metabolite_annotation/: answer3.txt  answer4.txt
problems_py/p2/: p2.ipynb  rosalind_rna.txt.REMOVED.git-id
problems_py/rna/: p2.ipynb  rna_small.txt
problems_py/stepik-2021/epigenomic-marks/: example.ipynb
problems_py/stepik-2021/haplotype_completion/answers/: ans3.txt  ans5.txt  ans6.txt
problems_py/stepik-2021/metabolite_annotation/: answer1.txt  helpers.py
problems_py/stepik_2021/haplotype_completion/: Haplotype EDA.ipynb
problems_py/stepik_2021/metabolite_annotation/: answer5.txt
problems_py/subs/: rosalind_subs (1).txt  subs.ipynb
test-data/: answer_revp.txt  rosalind_revp.txt
tests/: test_benchmark.py  test_helpers.py
