[tool.poetry]
name = "rosalind"
version = "0.1.0"
description = ""
authors = ["Luke Schiefelbein <luke.schiefelbein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.2.4"
bio-tools = "^0.1.0"
pytest = "^6.2.4"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
