[package]
name = "p2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio-lib-rs = { path = "../bio-lib-rs" }
bio-lib-string-rs = { path = "../bio-lib-string-rs" }
bio-lib-algebraic-rs = { path = "../bio-lib-algebraic-rs" }