[package]
name = "problems_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio-lib-rs = { path = "../bio-lib-rs" }
bio-lib-string-rs = { path = "../bio-lib-string-rs" }
bio-lib-algebraic-rs = { path = "../bio-lib-algebraic-rs" }
criterion = "0.3.5"
rand = "0.8.4"


[[bench]]
name = "adt_palindome"
harness = false

[[bench]]
name = "reverse_complement_iter_vs_vec"
harness = false

